<resources>
    <string name="app_name">Summarizer</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_skip_button">Skip</string>
    <string name="imdb_tensorflow">Blog Post to Summary</string>
    <string name="welcome_page_title">Text Summarization</string>
    <string name="welcome_page_description">Text Summarization using Tensorflow!</string>
    <string name="nlp_card_nsmc_pt_title">Summarizes Blog information</string>
    <string name="nlp_card_nsmc_tf_title">Summarizes Text in given Textbox</string>
    <string name="nlp_card_description">Summarize the content of a Blog Post by providing the URL</string>
    <string name="nlp_card_description1">Summarize text snippets using Summarizing Pipeline</string>
    <string name="nlp_card_description2">Summarize the text in an image</string>
    <string name="nlp_card_imdb_pt_title">Convert Text Snippets to Summary</string>
    <string name="nlp_card_imdb_tf_title">Convert Blogs to Summary</string>
    <string name="nlp_card_imdb_pt_title2">Convert Image Text to Summary</string>
    <string name="error_dialog_text">Sorry there was an error.</string>
    <string name="clear">Clear</string>
    <string name="continue1">Continue</string>
    <string name="enter_the_url">Enter the URL...</string>
    <string name="summarize">Summarize</string>
    <string name="summarized_text">Summarized Text</string>
</resources>
