<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <org.ListCardView
        android:id="@+id/blog_to_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/nlp_card_description"
        app:imageRes="@drawable/blog_foreground"
        app:titleRes="@string/nlp_card_imdb_tf_title"/>

    <org.ListCardView
        android:id="@+id/text_to_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/nlp_card_description1"
        app:imageRes="@drawable/textl"
        app:titleRes="@string/nlp_card_imdb_pt_title"/>

    <org.ListCardView
        android:id="@+id/image_to_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_content_margin"
        android:elevation="1dp"
        app:descriptionRes="@string/nlp_card_description2"
        app:imageRes="@drawable/imagef"
        app:titleRes="@string/nlp_card_imdb_pt_title2"/>

</LinearLayout>